--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RecordsAndStatistics</string>
+    <string name="main_daily">日常</string>
+    <string name="main_statistics">统计</string>
+    <string name="main_manage">管理</string>
 </resources>
